# facer

./: .gitignore  pyproject.toml
src/facer/: __main__.py  dataclasses.py  face_detector.py  face_direction.py  face_embedder.py  face_identifier.py  face_orienter.py  utils.py
